style.css
/* For mobile phones */

@media only screen and (max-width: 450px) {
  .front-c {
    display: none;
  }
  .back-c {
    display: none;
  }
  .progress-bar {
    display: none;
  }
  body {
    height: 100%;
    width: 100%;
    padding-left: 5%;
    padding-right: 5%;
    scroll-behavior: smooth;
  }
  .controler {
    position: static !important;
    padding-top: 4em;
    padding-bottom: 4em;
    bottom: unset;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
}

/* Default styles */

html {
  height: 100%;
  scroll-behavior: smooth;
}

body {
  background-image: linear-gradient(19deg, rgb(0, 94, 138) 0%, rgb(113, 222, 255) 100%);
  background-repeat: no-repeat;
  background-size: cover;
  font-family: 'Nunito', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
  font-weight: bold;
  display: table;
  width: auto;
  margin: 0 auto;
  padding-bottom: 8px;
  min-height: 100%;
  grid-template-rows: 1fr auto;
}

.blue {
  background-image: linear-gradient(19deg, rgb(0, 94, 138) 0%, rgb(113, 222, 255) 100%);
  stroke: #62d6f0;
}

.green {
  background-image: linear-gradient(19deg, rgb(51, 124, 69) 0%, rgb(83, 243, 136) 100%);
  stroke: #a4e480;
}

.purple {
  background-image: linear-gradient(19deg, rgb(109, 23, 131) 0%, rgb(218, 109, 245) 100%);
  stroke: #dd5dfd;
}

* {
  font: inherit;
}

.nav-logo {
  color: white;
  font-size: 30px;
}

.content {
  text-align: center;
}

.timer {
  position: relative;
  display: inline-block;
}

.timer button {
  outline: none;
  border: none;
  background: none;
  font-size: 45px;
  cursor: pointer;
}

.controler {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.duration {
  margin-block-start: 0em;
  margin-block-end: 0em;
  color: white;
  display: block;
  border: none;
  width: 240px;
  font-size: 90px;
  text-align: center;
}

.btn-icon {
  filter: invert(100%);
}

.btn-icon:hover {
  opacity: 60%;
  transition: 0.2s;
}

.progress-bar {
  height: 400px;
  width: 400px;
}

.btn-type {
  border: none;
  outline: none;
  background-color: transparent;
  border-radius: 8px;
  display: inline-block;
  cursor: pointer;
  color: #ffffff;
  font-family: Arial;
  font-size: 21px;
  padding: 16px 30px;
  text-decoration: none;
}

.active, .btn-type:hover {
  background-color: rgba(185, 185, 185, 0.274);
  transition: 0.5s
}

hr {
  border: 1.5px solid white;
  border-radius: 10px;
  opacity: 20%;
}

footer {
  text-align: center;
  color: white;
}

.footer-text {
  font-size: 12px;
  color: white;
  opacity: 50%;
}

.footer-icons {
  text-decoration: none;
  padding-left: 5px;
  padding-right: 5px;
  height: 30px;
  width: 30px;
}

.footer-icons:hover {
  opacity: 30%;
  transition: 0.3s;
}

